<resources>
    <string name="app_name">Hello Android Studio</string>
    <string name="title_activity_first_app">FirstAppActivity</string>
    <string name="hola_daniel">Hola Daniel :)!</string>
    <string name="esto_es_una_prueba">Esto es una prueba</string>
    <string name="del_layout_de_la_aplicaci_n">del layout de la aplicación</string>
    <string name="pulsame">PULSAME</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="esto_es_un_ejemplo">Esto es un ejemplo</string>
    <string name="title_activity_menu2">MenuActivity2</string>
    <string name="saludarapp">SALUDAR-APP</string>
    <string name="imc_app">IMC App</string>
    <string name="title_activity_imccalculator">IMCCalculatorActivity</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="altura">Altura</string>
    <string name="height_user">120 cm</string>
    <string name="descripcion_imagen_masculino">Ícono de género masculino</string>
    <string name="descripcion_imagen_femenino">Ícono de género femenino</string>
    <string name="peso">Peso</string>
    <string name="edad">edad</string>
    <string name="calcular">calcular</string>
    <string name="descripción_btn_plus_weight">Increase weight by one</string>
    <string name="descripción_btn_plus_age">Increase age by one</string>
    <string name="descripción_btn_subtrac_weight">Decrease weight by one</string>
    <string name="descripción_btn_subtrac_age">Decrease age by one</string>
    <string name="descripción_rs_height">Slider to select height, ranging from 50 to 230 centimeters</string>
    <string name="title_activity_resultimc">ResultimcActivity</string>
    <string name="tu_imc_es">Tu IMC es:</string>
    <string name="re_calcular">Re-calcular</string>
    <string name="error">¡¡ERROR!!</string>
    <string name="title_low_weight">Bajo Peso</string>
    <string name="description_low_weight">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_normal_weight">Peso Normal</string>
    <string name="description_normal_weight">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_overweight">Sobrepeso</string>
    <string name="description_overweight">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesity">Obesidad</string>
    <string name="description_obesity">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
    <string name="functionallity_list">Lista de Funcionalidades</string>
    <string name="to_do_app">TO DO App</string>
    <string name="title_activity_to_do">ToDoActivity</string>
    <string name="todo_app">todo app</string>
    <string name="categorias">categorías</string>
    <string name="todo_task">tareas</string>
    <string name="add_task">Añade una tarea</string>
    <string name="business">Negocios</string>
    <string name="personal">Personal</string>
    <string name="others">Otros</string>
    <string name="create_task">Crear tarea</string>
    <string name="horoscopo_app">HOROSCOPO App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horoscope">Horoscope</string>
    <string name="palmistry">Palmistry</string>
    <string name="luck">Luck</string>
    <!-- Nombres de signos zodiacales-->
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
</resources>