<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app_todo"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="0"
        android:backgroundTint="@color/white"
        android:hint="@string/add_task"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextFields">

    </EditText>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/business_category"
            android:checked="true"
            android:text="@string/business"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/personal_category"
            android:text="@string/personal"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/other_category"
            android:text="@string/others"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/create_task"
        android:textAllCaps="true"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck">

    </Button>

</LinearLayout>