<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="38dp"
    tools:context=".imccalculator.IMCCalculatorActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/viewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/descripcion_imagen_masculino"
                android:src="@drawable/ic_masculino"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hombre"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewMale"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/descripcion_imagen_femenino"
                android:src="@drawable/ic_femenino"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mujer"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMale">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textAllCaps="true"
                android:textColor="@color/title_text">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtracHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/descripción_btn_subtrac_weight"
                    android:src="@drawable/simbolo_menos_icono_02"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/height_user"
                    android:textColor="@color/title_text"
                    android:textSize="40sp"
                    android:textStyle="bold">

                </TextView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descripción_btn_plus_weight"
                    android:src="@drawable/simbolo_mas_icono_mesa_de_trabajo_1"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white">


                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descripción_rs_height"
                android:stepSize="1"
                android:valueFrom="50"
                android:valueTo="230">

            </com.google.android.material.slider.RangeSlider>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/viewAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textAllCaps="true"
                android:textColor="@color/title_text">

            </TextView>

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_text"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="60">

            </TextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtracWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/descripción_btn_subtrac_weight"
                    android:src="@drawable/simbolo_menos_icono_02"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descripción_btn_plus_weight"
                    android:src="@drawable/simbolo_mas_icono_mesa_de_trabajo_1"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white">


                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewWeight"
        app:layout_constraintTop_toBottomOf="@id/viewHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textAllCaps="true"
                android:textColor="@color/title_text">

            </TextView>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_text"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="25">

            </TextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtracAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/descripción_btn_subtrac_age"
                    android:src="@drawable/simbolo_menos_icono_02"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white"

                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descripción_btn_plus_age"
                    android:src="@drawable/simbolo_mas_icono_mesa_de_trabajo_1"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white">


                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAge">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>