<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app_todo"
        android:orientation="vertical"
        tools:context=".todoapp.ToDoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="44dp"
            android:text="@string/todo_app"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            style="@style/TodoSubtittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/categorias"
            android:textAllCaps="true">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            style="@style/TodoSubtittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/todo_task"
            android:textAllCaps="true">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:src="@drawable/todo_app_add"
        app:backgroundTint="@color/accent"
        app:fabSize="normal"
        app:tint="@color/white">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</FrameLayout>